(libs installed: clsx, react-hook-form, react-modal); custom modal added

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,3 +29,7 @@ body {
   background-color: var(--background-blue-color);
   color: var(--white-color);
 }
+
+.ReactModal__Body--open {
+  overflow: hidden;
+}
