--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -1,10 +1,83 @@
 .wrapper {
   @apply w-[320px] h-[568px] border border-black;
-  background-image: ;
+  background-image: url("/src/img/login/Rectangle\ 4logi_mob.jpg");
 }
+
+.logo_wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 97px;
+  margin-bottom: 53px;
+}
+
+.logo_text {
+  font-size: 19px;
+}
+
 .form {
   @apply flex flex-col gap-4;
+  gap: 40px;
 }
-.icon {
-  @apply w-[40px] h-[40px];
+.input-box {
+}
+.input {
+  width: 280px;
+  background: none;
+  border-bottom: 1px solid var(--white-40-color);
+  padding-left: 60px;
+  padding-bottom: 8px;
+  outline: none;
+  font-size: 18px;
+  margin-left: 20px;
+}
+.input_mail {
+  display: flex;
+  position: relative;
+}
+.error {
+  color: var(--dashboard-text-color);
+  font-size: 10px;
+  margin-top: 5px;
+}
+
+.btn_log {
+  width: 280px;
+  height: 50px;
+  margin: 0 auto;
+  border-radius: 20px;
+  font-size: 18px;
+  letter-spacing: 1.8px;
+
+  color: white;
+
+  background: linear-gradient(
+    97deg,
+    #ffc727 -16.42%,
+    #9e40ba 97.04%,
+    #7000ff 150.71%
+  );
+  box-shadow: 1px 9px 15px 0px rgba(0, 0, 0, 0.2);
+
+  /* transition: background-position 0.8s ease; */
+}
+
+.btn_reg {
+  width: 280px;
+  height: 50px;
+  margin: 0 auto;
+  border-radius: 20px;
+  font-size: 18px;
+  letter-spacing: 1.8px;
+
+  background-color: var(--white-color);
+  color: var(--text-button-color);
+  display: inline-block;
+  justify-content: center;
+}
+
+.email {
+  fill: var(--white-40-color);
+  position: absolute;
+  left: 31px;
 }
