--- a/src/components/CustomModal/CustomModal.module.css
+++ b/src/components/CustomModal/CustomModal.module.css
@@ -3,6 +3,7 @@
   padding: 20px;
   display: flex;
   flex-wrap: wrap;
+  background-image: url("../../img/login/Rectangle\ 4logi_mob.jpg");
 
   @media screen and (max-width: 767px) {
     flex-flow: column;
