--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -4,46 +4,37 @@
   /* background-size: cover;
   display: flex;
   flex-direction: column; */
-  background-image: url("/src/img/login/Gradient\ 4login_tab.jpg");
 }
 @media screen {
 }
 
 .box_logo {
-  @apply flex flex-col items-center pt-[97px] mb-[53px]
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 97px;
-  margin-bottom: 53px; */;
+  @apply flex flex-col items-center  mb-[53px];
 }
 
 .box_form {
   @apply flex flex-col gap-4;
-  position: relative;
   margin-bottom: 52px;
-}
-
-.box_btn {
-  /* align-items: center; */
-  /* justify-content: center; */
+  display: flex;
+  align-items: center;
 }
 
 .logo_text {
   font-size: 19px;
 }
 
-.form_mail {
+.input_box {
+  position: relative;
 }
-.form_pass {
-}
+
 .icon {
   fill: var(--white-40-color);
-  position: absolute;
   left: 31px;
+  position: absolute;
 }
 .input {
-  width: 280px;
+  /* width: 280px; */
+  width: auto;
   background: none;
   border-bottom: 1px solid var(--white-40-color);
   padding-left: 60px;
@@ -51,17 +42,17 @@
   outline: none;
   font-size: 18px;
   margin-left: 20px;
-  position: relative;
 }
 
 .error {
   color: var(--dashboard-text-color);
   font-size: 10px;
   margin-top: 5px;
+  text-align: center;
 }
 
-.btn_log {
-  margin-bottom: 20px;
+/* .btn_log { */
+/* margin-bottom: 20px;
   width: 280px;
   height: 50px;
   margin: 0 auto;
@@ -77,23 +68,7 @@
     #9e40ba 97.04%,
     #7000ff 150.71%
   );
-  box-shadow: 1px 9px 15px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 9px 15px 0px rgba(0, 0, 0, 0.2); */
 
-  /* transition: background-position 0.8s ease; */
-}
-
-.btn_reg {
-  width: 280px;
-  height: 50px;
-  margin: 0 auto;
-  border-radius: 20px;
-  font-size: 18px;
-  letter-spacing: 1.8px;
-
-  background-color: var(--white-color);
-  color: var(--text-button-color);
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+/* transition: background-position 0.8s ease; */
+/* } */
