--- a/src/components/TransactionsList/TransactionsList.module.css
+++ b/src/components/TransactionsList/TransactionsList.module.css
@@ -5,7 +5,7 @@
   box-shadow: 0 4px 60px 0 rgba(0, 0, 0, 0.25);
 
   .cell {
-    @apply font-bold text-[16px];
+    @apply font-semibold text-[16px];
   }
 }
 
@@ -30,7 +30,7 @@
 }
 
 .cell {
-  @apply flex text-[14px] items-center font-black;
+  @apply flex text-[14px] items-center;
 
   &.cellDate {
     @apply w-[12%];
@@ -58,7 +58,7 @@
 }
 
 .cellLeft {
-  @apply font-bold;
+  @apply font-[""];
 }
 
 .btnEdit {
