--- a/src/components/HomeTab/HomeTab.module.css
+++ b/src/components/HomeTab/HomeTab.module.css
@@ -1,3 +1,5 @@
 .btnAddTransaction {
   @apply fixed bottom-[20px] right-[20px] w-[44px] h-[44px] rounded-[50%] flex justify-center items-center md:bottom-[40px] md:right-[40px];
+
+  box-shadow: 1px 9px 15px 0 rgba(0, 0, 0, 0.2);
 }
