--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,6 +1,5 @@
 .wrapper {
   /* @apply w-[320px] h-[568px]; */
-  /* background-image: url("/src/img/login/Rectangle\ 4logi_mob.jpg"); */
   /* background-size: cover;
   display: flex;
   flex-direction: column; */
@@ -9,14 +8,14 @@
 }
 
 .box_logo {
-  @apply flex flex-col items-center  mb-[53px];
+  /* @apply flex flex-col items-center  mb-[53px]; */
 }
 
 .box_form {
-  @apply flex flex-col gap-4;
-  margin-bottom: 52px;
+  @apply flex flex-col;
   display: flex;
   align-items: center;
+  margin-top: 53px;
 }
 
 .logo_text {
@@ -33,8 +32,8 @@
   position: absolute;
 }
 .input {
-  /* width: 280px; */
-  width: auto;
+  width: 280px;
+  /* width: auto; */
   background: none;
   border-bottom: 1px solid var(--white-40-color);
   padding-left: 60px;
@@ -42,8 +41,10 @@
   outline: none;
   font-size: 18px;
   margin-left: 20px;
+  /* margin-bottom: 52px; */
 }
-
+@media screen {
+}
 .error {
   color: var(--dashboard-text-color);
   font-size: 10px;
@@ -72,3 +73,24 @@
 
 /* transition: background-position 0.8s ease; */
 /* } */
+.strengthBarContainer {
+  display: inline-block;
+  align-items: center;
+  justify-content: center;
+  width: 280px; /* Змініть це значення відповідно до необхідної ширини */
+  margin-top: 8px;
+  margin-bottom: 40px;
+}
+
+.strengthBar {
+  height: 10px; /* Висота полоски */
+  /* background-color: #e0e0e0; Колір фону полоски */
+  border-radius: 5px; /* Заокруглені кути */
+  /* overflow: hidden; */
+}
+
+.strengthBar div {
+  height: 100%; /* Висота всередині полоски */
+  transition: width 0.3s; /* Плавна анімація зміни ширини */
+  border-radius: 5px; /* Заокруглені кути */
+}
