--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,6 +29,7 @@
   min-width: 320px;
   /* max-width: 375px; */
   margin: 0 auto;
+  /* overflow: hidden; */
 }
 
 @media only screen and (min-width: 768px) {
