feat: editTransaction modal functionality; added balance into under mobile transaction list; update balance after delete/update transaction

--- a/src/components/TransactionItem/TransactionItem.module.css
+++ b/src/components/TransactionItem/TransactionItem.module.css
@@ -7,6 +7,14 @@
     &:last-of-type {
       @apply border-b-0;
     }
+
+    .cell {
+      @apply pr-[10px] break-all;
+
+      &.cellBtn {
+        @apply pr-0;
+      }
+    }
   }
 
   &.scrollable {
