--- a/src/components/TransactionsList/TransactionsList.module.css
+++ b/src/components/TransactionsList/TransactionsList.module.css
@@ -4,8 +4,12 @@
   background-color: rgba(82, 59, 126, 0.6);
   box-shadow: 0 4px 60px 0 rgba(0, 0, 0, 0.25);
 
+  &.row {
+    @apply pr-[16px];
+  }
+
   .cell {
-    @apply font-semibold text-[16px];
+    @apply font-semibold text-[16px] pr-[10px];
   }
 }
 
