--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,12 +1,11 @@
 .active {
   @apply font-black;
   display: flex;
-
   svg {
     fill: #734aef;
   }
 }
 
 .defaultLink {
-  @apply flex;
+  @apply flex gap-[20px];
 }
