--- a/src/components/TransactionItem/TransactionItem.module.css
+++ b/src/components/TransactionItem/TransactionItem.module.css
@@ -5,7 +5,7 @@
     @apply border-b-[1px] border-[var(--form-color-color)];
 
     &:last-of-type {
-      @apply border-b-0;
+      @apply border-b-0 md:max-xl:mb-[80px];
     }
 
     .cell {
@@ -18,7 +18,7 @@
   }
 
   &.scrollable {
-    @apply md:pr-[16px];
+    @apply md:pr-[10px];
   }
 }
 
