--- a/src/components/TransactionsList/TransactionsList.module.css
+++ b/src/components/TransactionsList/TransactionsList.module.css
@@ -5,7 +5,7 @@
   box-shadow: 0 4px 60px 0 rgba(0, 0, 0, 0.25);
 
   &.row {
-    @apply pr-[16px];
+    @apply md:pr-[10px];
   }
 
   .cell {
@@ -14,7 +14,7 @@
 }
 
 .tableBody {
-  @apply max-h-[496px];
+  @apply xl:max-h-[496px];
 }
 
 .row {
