--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -4,6 +4,5 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  background-image: linear-gradient(rgba(158, 64, 186, 1), rgba(112, 0, 255, 1)),
-    url(../../img/login/login_desk@2x.jpg);
+  background-image: url(../../img/login/login_tab@2.jpg);
 }
