--- a/src/pages/RegistrationPage/RegistrationPage.module.css
+++ b/src/pages/RegistrationPage/RegistrationPage.module.css
@@ -1,6 +1,18 @@
 .wrapper {
   width: 100vw;
   height: 100vh;
-  background-image: linear-gradient(rgba(158, 64, 186, 1), rgba(112, 0, 255, 1)),
+  background-image: linear-gradient(var(--Form-color, rgba(255, 255, 255, 0.1))),
     url(../../img/login/login_desk@2x.jpg);
+  box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.25);
+
+  max-width: 375px;
+  margin: 0 auto;
 }
+.box_btn {
+  min-width: 280px;
+}
+background: var(--Form-color, rgba(255, 255, 255, 0.1));
+
+/* form effects */
+box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.25);
+backdrop-filter: blur(50px);
