fix: transactions list UI fixes (break-word); sort transactions changed; removed blur from custom modal

--- a/src/components/TransactionItem/TransactionItem.module.css
+++ b/src/components/TransactionItem/TransactionItem.module.css
@@ -9,7 +9,9 @@
     }
 
     .cell {
-      @apply pr-[10px] break-all;
+      @apply pr-[10px];
+
+      word-break: break-word;
 
       &.cellBtn {
         @apply pr-0;
