--- a/src/pages/RegistrationPage/RegistrationPage.module.css
+++ b/src/pages/RegistrationPage/RegistrationPage.module.css
@@ -1,18 +1,19 @@
-.wrapper {
+.container {
   width: 100vw;
   height: 100vh;
-  background-image: linear-gradient(var(--Form-color, rgba(255, 255, 255, 0.1))),
-    url(../../img/login/login_desk@2x.jpg);
-  box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.25);
-
-  max-width: 375px;
-  margin: 0 auto;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.box_btn {
-  min-width: 280px;
-}
-background: var(--Form-color, rgba(255, 255, 255, 0.1));
 
-/* form effects */
-box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.25);
-backdrop-filter: blur(50px);
+@media only screen and (min-width: 768px) {
+  .container {
+    background-image: url(/src/img/register/tab_reg@2x.png);
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .container {
+    background-image: url(/src/img/register/desk_reg@2x.png);
+  }
+}
