--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -73,11 +73,22 @@
 .strengthBar > p {
   display: none !important;
 }
+
 .strengthBar > div > div:nth-child(even) {
   display: none !important;
 }
+
 .strengthBar > div > div {
   flex-basis: auto !important;
   height: 4px !important;
   filter: drop-shadow(0px 0px 3px #fff);
+}
+
+.strengthBar > div > div:first-child {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.strengthBar > div > div:last-child {
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
