--- a/src/components/TransactionItem/TransactionItem.module.css
+++ b/src/components/TransactionItem/TransactionItem.module.css
@@ -110,4 +110,33 @@
 
 .btnDelete {
   @apply text-[14px] py-[4px] px-[12px] rounded-[20px] font-normal;
+
+  background: var(
+    --button-gradient,
+    linear-gradient(97deg, #ffc727 -16.42%, #9e40ba 97.04%, #7000ff 150.71%)
+  );
+  box-shadow: 1px 9px 15px 0px rgba(0, 0, 0, 0.2);
+}
+
+.btnDeleteModal {
+  @apply block w-[100%] mb-[20px] px-[20px] py-[13px] text-[18px] text-[var(--white-color)] rounded-[20px] uppercase tracking-[0.1em] transition-all delay-[250] ease-in-out md:w-[300px] md:mx-auto;
+
+  background: var(
+    --button-gradient,
+    linear-gradient(97deg, #ffc727 -16.42%, #9e40ba 97.04%, #7000ff 150.71%)
+  );
+  box-shadow: 1px 9px 15px 0px rgba(0, 0, 0, 0.2);
+
+  &:hover,
+  &:focus {
+    background: var(
+      --button-gradient,
+      linear-gradient(
+        97deg,
+        #ffc527de -16.42%,
+        #9d40bada 97.04%,
+        #6f00ffd0 150.71%
+      )
+    );
+  }
 }
