--- a/src/pages/DashboardPage/DashboardPage.module.css
+++ b/src/pages/DashboardPage/DashboardPage.module.css
@@ -8,6 +8,16 @@
   }
 }
 
+@media only screen and (min-width: 768px) and (max-width: 1279px) {
+  .background {
+    height: calc(100vh - 80px);
+  }
+
+  .height {
+    height: calc(100vh - 80px);
+  }
+}
+
 @media only screen and (max-width: 767px) {
   .height {
     height: calc(100vh - 72px);
