--- a/src/components/CustomButton/CustomButton.module.css
+++ b/src/components/CustomButton/CustomButton.module.css
@@ -24,5 +24,5 @@
 .mono {
   box-shadow: 1px 9px 15px 0px rgba(0, 0, 0, 0.2);
 
-  @apply transition-all delay-[250] block mx-auto w-[100%] uppercase text-center text-[18px] tracking-[0.1em] rounded-[20px] py-[13px] px-[20px] mb-[20px] bg-[var(--white-color)] hover:bg-gray-300 focus:bg-gray-300 text-[var(--text-button-color)] md:w-[300px];
+  @apply transition-all delay-[250] block mx-auto w-[100%] uppercase text-center text-[18px] tracking-[0.1em] rounded-[20px] py-[13px] px-[20px] bg-[var(--white-color)] hover:bg-gray-300 focus:bg-gray-300 text-[var(--text-button-color)] md:w-[300px];
 }
