--- a/src/pages/DashboardPage/DashboardPage.module.css
+++ b/src/pages/DashboardPage/DashboardPage.module.css
@@ -1,3 +1,7 @@
+.background {
+  @apply overflow-y-auto;
+}
+
 @media only screen and (min-width: 1280px) {
   .background {
     height: calc(100vh - 80px);
