--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -16,24 +16,15 @@
   @apply flex flex-col;
   display: flex;
   align-items: center;
-  margin-top: 53px;
   gap: 40px;
   width: 100%;
-  margin: 0 auto;
-
-  @media screen and (max-width: 767px) {
-    margin-top: 52px;
-  }
+  margin: 12px auto 0;
 }
 .input_wrapper {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-
-  @media screen and (max-width: 767px) {
-    width: 100%;
-    gap: 40px;
-  }
+  width: 100%;
+  gap: 40px;
 }
 .input_box {
   position: relative;
@@ -48,13 +39,7 @@
 .box_form {
   position: relative;
 }
-.box_btn {
-  margin-top: 52px;
 
-  @media screen and (max-width: 767px) {
-    margin-top: 0;
-  }
-}
 @media screen and (min-width: 768px) {
   .input {
     min-width: 409px;
